PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Oct 2005, PHP 5.1 Release Candidate 3
- Fixed bug #34873 (Segmentation Fault on foreach in object). (Dmitry)

14 Oct 2005, PHP 5.1 Release Candidate 2
- Changed SQLite extension to be a shared module in Windows distribution.
  (Edin)
- Changed "instanceof" and "catch" operators, is_a() and is_subclass_of()
  functions to not call __autoload(). (Dmitry)
- Improved SPL extension. (Marcus)
  . Moved RecursiveArrayIterator from examples into extension
  . Moved RecursiveFilterIterator from examples into extension
  . Added SplObjectStorage
  . Made all SPL constants class constants
  . Renamed CachingRecursiveIterator to RecursiveCachingIterator to follow
    Recursive<*>Iterator naming scheme.
- Upgraded bundled libraries:
  . PCRE library to version 6.2. (Andrei)
  . SQLite 3 library in ext/pdo_sqlite to 3.2.7. (Ilia)
  . SQLite 2 library in ext/sqlite to 2.8.16. (Ilia)
- Upgraded bundled libraries in Windows distribution. (Edin)
  . zlib 1.2.3
  . curl 7.14.0
  . openssl 0.9.8
  . ming 0.3b
  . libpq (PostgreSQL) 8.0.1
- Moved extensions to PECL:
  . ext/mcve (Jani, Derick, Pierre)
  . ext/oracle (Jani, Derick)
  . ext/ovrimos (Jani, Derick, Pierre)
  . ext/pfpro (Jani, Derick, Pierre)
- Added support for class constants and static members for internal classes.
  (Dmitry, Michael Wallner)
- Added "new_link" parameter to mssql_connect() (Bug #34369). (Frank)
- Added missing safe_mode checks for image* functions and cURL. (Ilia)
- Added missing safe_mode/open_basedir checks for file uploads. (Ilia)
- Fixed an error in mysqli_fetch_fields (returned NULL instead of an
  array when row number > field_count). (Georg)
- Fixed possible INI setting leak via virtual() in Apache 2 sapi. (Ilia)
- Fixed potential GLOBALS overwrite via import_request_variables() and
  possible crash and/or memory corruption. (Ilia)